--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "python-fido2"]
 	path = python-fido2
-	url = git@github.com:Yubico/python-fido2.git
+	url = https://github.com/Yubico/python-fido2.git
